k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: insavein
  labels:
    name: insavein
    environment: production
    app: insavein-platform
